...
                  icon: Icons.category_outlined,
                  label: 'Kategori Iuran',
                  onTap: () => context.pushNamed('rw_kategoriIuran'),
                ),
                _buildMenuItem(
                  icon: Icons.request_page_outlined,
                  label: 'Tagih Iuran',
                  onTap: () => context.pushNamed('rw_tagihIuran'),
                ),
                _buildMenuItem(
                  icon: Icons.receipt_long_outlined,
                  label: 'Tagihan',
                  onTap: () => context.pushNamed('rw_tagihan'),
...
